fix crash server, add category future api

--- a/server/admin-dashboard/assets/css/material-dashboard.css
+++ b/server/admin-dashboard/assets/css/material-dashboard.css
@@ -24017,7 +24017,7 @@ pre[class*='language-'] {
   background-color: #fff;
   z-index: 999;
   padding: 0;
-  display:none;
+  display: none;
 }
 
 #search-results li {
@@ -24025,7 +24025,7 @@ pre[class*='language-'] {
   width: 100%;
   padding: 8px 12px;
   border-bottom: 1px solid #ddd;
-  color: rgba(0,0,0,0.7) !important;
+  color: rgba(0, 0, 0, 0.7) !important;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -24038,8 +24038,7 @@ pre[class*='language-'] {
 
 #search-results li a {
   font-size: 12px;
-  color: rgba(0,0,0,0.7) !important;
-
+  color: rgba(0, 0, 0, 0.7) !important;
 }
 
 #search-results li:hover {
@@ -24047,9 +24046,9 @@ pre[class*='language-'] {
 }
 
 .pl {
-	display: block;
-	width: 20px;
-	height: 20px;
+  display: block;
+  width: 20px;
+  height: 20px;
   position: absolute;
   top: 8px;
   right: 10px;
@@ -24059,54 +24058,61 @@ pre[class*='language-'] {
   display: none !important;
 }
 
-.pl__ring, .pl__ball {
-	animation: ring 2s ease-out infinite;
+.pl__ring,
+.pl__ball {
+  animation: ring 2s ease-out infinite;
 }
 .pl__ball {
-	animation-name: ball;
+  animation-name: ball;
 }
 
 /* Dark theme  */
 @media (prefers-color-scheme: dark) {
-	:root {
-		--bg: hsl(223,10%,10%);
-		--fg: hsl(223,10%,90%);
-	}
+  :root {
+    --bg: hsl(223, 10%, 10%);
+    --fg: hsl(223, 10%, 90%);
+  }
 }
 
 /* Animation */
 @keyframes ring {
-	from {
-		stroke-dasharray: 0 257 0 0 1 0 0 258;
-	}
-	25% {
-		stroke-dasharray: 0 0 0 0 257 0 258 0;
-	}
-	50%, to {
-		stroke-dasharray: 0 0 0 0 0 515 0 0;
-	}
+  from {
+    stroke-dasharray: 0 257 0 0 1 0 0 258;
+  }
+  25% {
+    stroke-dasharray: 0 0 0 0 257 0 258 0;
+  }
+  50%,
+  to {
+    stroke-dasharray: 0 0 0 0 0 515 0 0;
+  }
 }
 @keyframes ball {
-	from, 50% {
-		animation-timing-function: ease-in;
-		stroke-dashoffset: 1;
-	}
-	64% {
-		animation-timing-function: ease-in;
-		stroke-dashoffset: -109;
-	}
-	78% {
-		animation-timing-function: ease-in;
-		stroke-dashoffset: -145;
-	}
-	92% {
-		animation-timing-function: ease-in;
-		stroke-dashoffset: -157;
-	}
-	57%, 71%, 85%, 99%, to {
-		animation-timing-function: ease-out;
-		stroke-dashoffset: -163;
-	}
+  from,
+  50% {
+    animation-timing-function: ease-in;
+    stroke-dashoffset: 1;
+  }
+  64% {
+    animation-timing-function: ease-in;
+    stroke-dashoffset: -109;
+  }
+  78% {
+    animation-timing-function: ease-in;
+    stroke-dashoffset: -145;
+  }
+  92% {
+    animation-timing-function: ease-in;
+    stroke-dashoffset: -157;
+  }
+  57%,
+  71%,
+  85%,
+  99%,
+  to {
+    animation-timing-function: ease-out;
+    stroke-dashoffset: -163;
+  }
 }
 
 /* MS supports */
