- rewrite api using mysql - config server with env - sperate server and app - handle error

--- a/server/admin-dashboard/assets/css/material-dashboard.css
+++ b/server/admin-dashboard/assets/css/material-dashboard.css
@@ -24066,6 +24066,10 @@ pre[class*='language-'] {
   animation-name: ball;
 }
 
+#category-list:hover {
+  opacity: 1 !important;
+}
+
 /* Dark theme  */
 @media (prefers-color-scheme: dark) {
   :root {
